<resources>
    <string name="app_name">Inventory</string>
    <string name="action_settings">Settings</string>
    <string name="no_items_message">Add your first product!</string>
    <string name="new_product_activity_label">Add Product</string>
    <string name="product_detail_activity_label">Product Details</string>
    <string name="product_name_label">Product name</string>
    <string name="quantity_label">Quantity</string>
    <string name="price_label">Price</string>

    <string name="button_sell_item">Sell</string>
    <string name="button_remove_product">Remove Product</string>
    <string name="button_order_product">Order Product</string>
    <string name="button_add_product">Add Product</string>

    <string name="dialog_remove_entry_text">Are you sure you want to delete this product from the inventory?</string>

    <string name="invalid_price_message">The price is of invalid format.</string>

    <string name="product_name_empty_message">You must enter a product name!</string>
    <string name="product_image_empty_message">Please add a product image!</string>
</resources>
