<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.android.inventory.NewProductActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/product_name_label"
        android:textSize="@dimen/label_font_size"
        android:textAllCaps="true"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/product_name_field"
        android:singleLine="true"
        android:inputType="text" />


    <TextView
        android:layout_marginTop="@dimen/mid_gap"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/quantity_label"
        android:textSize="@dimen/label_font_size"
        android:textAllCaps="true"/>

    <LinearLayout
        android:layout_marginTop="@dimen/small_gap"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:layout_width="@dimen/button_size"
            android:layout_height="@dimen/button_size"
            android:text="-"
            android:textStyle="bold"
            android:onClick="onDecreaseQuantity"/>

        <EditText
            android:layout_width="@dimen/double_button_size"
            android:layout_height="@dimen/button_size"
            android:id="@+id/product_quantity_field"
            android:singleLine="true"
            android:inputType="number"
            android:text = "1"
            android:layout_gravity="center"/>

        <Button
            android:layout_width="@dimen/button_size"
            android:layout_height="@dimen/button_size"
            android:text="+"
            android:textStyle="bold"
            android:onClick="onIncreaseQuantity"/>


    </LinearLayout>

    <TextView
        android:layout_marginTop="@dimen/mid_gap"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/price_label"
        android:textSize="@dimen/label_font_size"
        android:textAllCaps="true"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="@dimen/button_size"
            android:id="@+id/product_price_field"
            android:singleLine="true"
            android:inputType="numberDecimal"
            android:text = "$1.00"
            android:imeOptions="actionDone"
            android:layout_gravity="center"/>

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"/>

    </LinearLayout>


    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>


    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAllCaps="true"
        android:text="@string/add_product_button_text"/>

</LinearLayout>
