<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.android.inventory.ProductDetailActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:scaleType="centerCrop"
        android:src = "@drawable/tomaten"
        android:id = "@+id/product_image_view"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:padding="@dimen/mid_gap"
        android:layout_weight="1">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="18dp"
            android:text="ProductName"
            android:id="@+id/product_name_field"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_marginTop="@dimen/mid_gap"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/quantity_label"
                    android:textSize="@dimen/label_font_size"
                    android:textAllCaps="true"/>


                <LinearLayout
                    android:layout_marginTop="@dimen/small_gap"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/button_size"
                    android:orientation="horizontal">

                    <Button
                        android:layout_width="@dimen/button_size"
                        android:layout_height="@dimen/button_size"
                        android:text="-"
                        android:textStyle="bold"
                        android:onClick="onDecreaseQuantity"/>

                    <EditText
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="@dimen/button_size"
                        android:id="@+id/product_quantity_field"
                        android:singleLine="true"
                        android:inputType="number"
                        android:text = "1"
                        android:layout_gravity="center"/>

                    <Button
                        android:layout_width="@dimen/button_size"
                        android:layout_height="@dimen/button_size"
                        android:text="+"
                        android:textStyle="bold"
                        android:onClick="onIncreaseQuantity"/>


                 </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_marginLeft="@dimen/mid_gap"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_marginTop="@dimen/mid_gap"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/price_label"
                    android:textSize="@dimen/label_font_size"
                    android:textAllCaps="true"/>


                <LinearLayout
                    android:layout_marginTop="@dimen/small_gap"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:textSize="18dp"
                        android:textStyle="bold"
                        android:text="$"/>

                    <EditText
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:gravity="bottom"
                        android:layout_height="@dimen/button_size"
                        android:id="@+id/product_price_field"
                        android:singleLine="true"
                        android:inputType="numberDecimal"
                        android:text = "1.00"
                        android:imeOptions="actionDone"
                        android:layout_gravity="center"/>

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_remove_product"
            android:textAllCaps="true"
            android:onClick="onRemoveProduct"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_order_product"
            android:textAllCaps="true"
            android:onClick="onOrderProduct"/>

    </LinearLayout>

</LinearLayout>

